# Quality_assesment

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json
services/backend/: .dockerignore  Dockerfile  pyproject.toml
services/backend/migrations/models/: 0_20230606141827_init.py  0_20230611165015_init.py  0_20230611173817_init.py  0_20230611211956_init.py  10_20230607111856_update.py  1_20230606150140_update.py  1_20230611180030_update.py  1_20230612110615_update.py  2_20230606153023_update.py  2_20230611180733_update.py  2_20230612110920_update.py  3_20230606215533_update.py  3_20230611190000_update.py  4_20230606221416_update.py  4_20230611191706_update.py  5_20230607003948_update.py  6_20230607004205_update.py  7_20230607104537_update.py  8_20230607105459_update.py  9_20230607110101_update.py
services/backend/src/: main.py
services/backend/src/api/: __init__.py
services/backend/src/api/v1/competence/: models.py  routes.py  schemas.py
services/backend/src/api/v1/dcs/: models.py  routes.py  schemas.py
services/backend/src/api/v1/direction/: models.py  routes.py  schemas.py
services/backend/src/api/v1/discipline/: models.py  routes.py  schemas.py
services/backend/src/api/v1/faculty/: models.py  routes.py  schemas.py
services/backend/src/api/v1/group/: models.py  routes.py  schemas.py
services/backend/src/api/v1/kim/: models.py  routes.py  schemas.py
services/backend/src/api/v1/opop/: models.py  routes.py  schemas.py
services/backend/src/database/: config.py  register.py
services/frontend/: Dockerfile  nginx.conf  (+3 more)
(+49 files in other folders)
